<resources>
    <string name="app_name">HackAlong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">usr</string>
    <string name="pass">pwd</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hackalong">HACKALONG</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search...</string>
    <string name="update"> Update</string>>
    <string name="NoEvents"> No Events Listed</string>
    <string name="PWInfo"> *Passwords must be at least 5 characters long</string>

    <string name="AppInfo">App Info</string>
    <string name="Class">TCSS 450 Spring 2017</string>
    <string name="professor">Professor: Charles Bryan  </string>
    <string name="school">University Of Washingtong Tacoma</string>
    <string name="author">Authors: Clayton Blair, Devin Durham, Thanh Le</string>
    <string name="contact">Contact info: d1durham@uw.edu</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="show_pass">Show Password</string>

    <!--pref key values-->
    <string name ="isLoggedIn">ILI</string>>
    <string name ="UE">UEmail</string>>
    <string name ="UN">UName</string>
    <string name ="UA">UAge</string>
    <string name ="UL">ULoc</string>
    <string name ="UB">UBio</string>
    <string name ="UEv">UEvents</string>
    <string name ="UT">UTag</string>

</resources>
